--- a/Problem5.PowerPointSlide.html
+++ b/Problem5.PowerPointSlide.html
@@ -4,7 +4,62 @@
     <meta charset="UTF-8">
     <title>PowerPoint Slide</title>
 </head>
-<body>
-
+<body background="images/background.jpg">
+    <div>
+        <h1>
+            <font color="orange">&nbsp;&nbsp;Headings and Paragraphs</font>
+        </h1>
+    </div>
+    <ul type="square" style="color:orange">
+        <li>
+            <h2>
+                <font color="white">Heading Tags:</font>
+                &#60h1&#62; <font color="white">-</font>  &#60;h6&#62;
+            </h2>
+            <table border="1" bgcolor="#0f0f0f">
+                <tr>
+                    <td width="800">
+                        <font color="#ffe4c4" size="5">
+                            &#60h1&#62;Heading 1&#60&#47;h1&#62;<br>
+                            &#60h2&#62;Sub heading 2&#60&#47;h2&#62;<br>
+                            &#60h3&#62;Sub heading 3&#60&#47;h3&#62;
+                        </font>
+                    </td>
+                </tr>
+            </table>
+        </li>
+        <li>
+            <h2>
+                <font color="white">Paragraph Tags:</font>  &#60p&#62;
+            </h2>
+            <table border="1" bgcolor="#0f0f0f">
+                <tr>
+                    <td width="800">
+                        <font color="#ffe4c4" size="5">
+                            &#60p&#62;This is my first paragraph&#60&#47;p&#62;<br>
+                            &#60p&#62;This is my second paragraph&#60&#47;p&#62;
+                        </font>
+                    </td>
+                </tr>
+            </table>
+        </li>
+        <li>
+            <h2>
+                <font color="white">Sections:</font>
+                &#60div&#62 <font color="white">and</font> &#60span&#62
+            </h2>
+            <table border="1" bgcolor="#0f0f0f">
+                <tr>
+                    <td width="800">
+                        <font color="#ffe4c4" size="5">
+                            &#60div style="background: skyblue;"&#62;<br>
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;This is a div<br>
+                            &#60&#47div&#62;
+                        </font>
+                    </td>
+                </tr>
+            </table>
+        </li>
+    </ul>
 </body>
 </html>
